# pdf-extractext

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/infrastructure/: __init__.py
tests/: test_api.py  test_pdf_service.py  test_summary_service.py
